fix(styles): addresses minor alignment and style related bugs. Tracks: https://github.com/openshiftio/openshift.io/issues/3813

--- a/src/app/insights/insights.component.less
+++ b/src/app/insights/insights.component.less
@@ -84,16 +84,20 @@
     .card-pf-aggregate-status-notifications {
         text-align: center;
         margin-top: 80px;
+        span {
+            font-size: 14px;
+        }
         .card-pf-aggregate-status-notification {
-            display:inline-grid;
+            display: inline-grid;
             .pficon-info {
-                font-family:PatternFlyIcons-webfont;
-                font-size:58px;
-                color:#9c9c9c;
-                text-align:center;
+                font-family: PatternFlyIcons-webfont;
+                font-size: 58px;
+                color: #9c9c9c;
+                text-align: center;
             }
             .insight-info {
-                padding-top:17px;
+                padding-top: 17px;
+                font-size: 24px;
             }
         }
     }
